package com.scribehealth.builder;

public class PatientProfileValidationException extends RuntimeException {

    public PatientProfileValidationException(String message) {
        super(message);
    }
}
